Refactor error handling and logging across multiple classes; improve debug console integration and UI elements for better user experience